src/objects/Account_Plan_Rentability__c.object
<CustomObject>
    <description>Rentability Data for Account Plan. Implement Prediction variables as well as results</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>Text value for account Id.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship with Account Planning (BBVA Global Object)</description>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Account Plan Rentabilities</relationshipLabel>
        <relationshipName>Account_Plan_Rentabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_Account_Plan__c</fullName>
        <label>Current Year Account Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Estimation__c</fullName>
        <description>Estimation for current Year.</description>
        <label>Current Year Estimation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icon_Name_Current_Year__c</fullName>
        <description>Icon class for Current Year</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon Name Current Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Name_Next_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon Name Next Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Year__c</fullName>
        <label>Next Year Estimation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Id__c</fullName>
        <description>Section data for Rentability (Margen Financiero-Id, Comisiones-Id or Margen Ordinario-Id)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spread_Month__c</fullName>
        <label>Spread Month</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <description>Spread Yearly</description>
        <label>Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Structured_Commission__c</fullName>
        <label>Structured Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RENTABILITY</fullName>
                </value>
                <value>
                    <fullName>ESTVARIABLES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Plan Rentability</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Rentabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>